force-app/main/default/objects/Process_Action__mdt/Process_Action__mdt.object-meta.xml
<CustomObject>
    <label>Process Action</label>
    <pluralLabel>Process Actions</pluralLabel>
</CustomObject>