force-app/main/default/objects/Process_Action__mdt/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <label>Action Label</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Text shown on the chevron step or button.</description>
</CustomField>