force-app/main/default/objects/Process_Action__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Text</type>
    <length>40</length>
    <description>Logical action category, e.g. View, Create, Update, Hierarchy, Documents.</description>
</CustomField>