force-app/main/default/objects/Process_Action__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Inactive actions are not returned to the component.</description>
</CustomField>