force-app/main/default/objects/Process_Action__mdt/fields/Display_Style__c.field-meta.xml
<CustomField>
    <fullName>Display_Style__c</fullName>
    <label>Display Style</label>
    <type>Text</type>
    <length>20</length>
    <description>Either "chevron" or "buttons". Determines how the actions render.</description>
</CustomField>