force-app/main/default/objects/Process_Action__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <type>Text</type>
    <length>60</length>
    <description>SLDS icon name shown next to the action, e.g. utility:add.</description>
</CustomField>