force-app/main/default/objects/Process_Action__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>API name of the object whose record page hosts this action (e.g. Opportunity, Case).</description>
</CustomField>