force-app/main/default/objects/Process_Action__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Controls the left-to-right order of steps/buttons.</description>
</CustomField>