force-app/main/default/objects/Process_Action__mdt/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <label>Target Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Meaning depends on Target Type: Flow API name (Flow), the relationship field whose Id to open e.g. AccountId (Navigation), or the message body (Message).</description>
</CustomField>