force-app/main/default/objects/Process_Action__mdt/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Text</type>
    <length>40</length>
    <description>How the action is performed: Message (informational), Navigation, or Flow.</description>
</CustomField>